src/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;


@font-face {
    font-family: "quicksand";
    src: url('./assets/fonts/quicksand.ttf');
}

@font-face {
    font-family: "mrdafoe";
    src: url('./assets/fonts/phil.ttf');
}

html {
    scroll-behavior: smooth;
    background-color: rgb(38 38 38);
}

.swiper-pagination-bullet-active {
    background-color: rgb(244 63 94) !important;
}

.swiper-button-next, .swiper-button-prev {
    opacity: .33;
    color: white;
    transition: all 0.15s;
}

.swiper-button-next:hover, .swiper-button-prev:hover {
    color: rgb(244 63 94);
    opacity: 1;
    filter: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
}

.swiper-button-disabled {
    display: none;
}

.proj-card {
    transition: all 0.15s;
}

.proj-card:hover > a > img {
    filter: grayscale(0);
}

.proj-card:hover {
    background-color: rgb(82 82 82);
    filter: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
}

.router-slide > div {
    height: 100%;
}

